tests/specs/ecosystem/ooneex/gql_model/1_0_0.test
ooneex/gql-model/1.0.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@ooneex/exception@^1.0.1": "jsr:@ooneex/exception@1.0.3",
      "jsr:@ooneex/exception@^1.0.3": "jsr:@ooneex/exception@1.0.3",
      "jsr:@ooneex/helper@^1.0.3": "jsr:@ooneex/helper@1.0.3",
      "jsr:@ooneex/validation@^1.0.0": "jsr:@ooneex/validation@1.0.4",
      "npm:acorn@^8.11.3": "npm:acorn@8.11.3",
      "npm:zod@^3.22.4": "npm:zod@3.23.8"
    },
    "jsr": {
      "@ooneex/exception@1.0.3": {
        "integrity": "5fc30e591cc916c9b0664c39eb169c9f1cf9f5644340e3d4c22258c0e32e71d8"
      },
      "@ooneex/helper@1.0.3": {
        "integrity": "cf59cf79bbc557e9bdddb66b32a52697b94d57f2dc2e44bc149aacaf76ed8c2a",
        "dependencies": [
          "npm:acorn@^8.11.3"
        ]
      },
      "@ooneex/validation@1.0.4": {
        "integrity": "5315a40f065757dae73242c83b7c5c5ba6a07e5fa42f661de6abab159ece08e5",
        "dependencies": [
          "jsr:@ooneex/exception@^1.0.3",
          "jsr:@ooneex/helper@^1.0.3",
          "npm:zod@^3.22.4"
        ]
      }
    },
    "npm": {
      "acorn@8.11.3": {
        "integrity": "sha512-Y9rRfJG5jcKOE0CLisYbojUjIrIEE7AGMzA/Sm4BslANhbS+cDMpgBdcPT91oJ7OuJ9hYJBx59RjbhxVnrF8Xg==",
        "dependencies": {}
      },
      "zod@3.23.8": {
        "integrity": "sha512-XBx9AXhXktjUqnepgTiE5flcKIYWi/rme0Eaj+5Y0lftuGBq+jyRu/md4WnuxqgP1ubdpNCsYEYPxrzVHD8d6g==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2724 [ERROR]: '"https://jsr.io/@ooneex/validation/1.0.4/index.ts"' has no exported member named 'AssertBool'. Did you mean 'AssertBoolean'?
import { AssertBool } from "jsr:@ooneex/validation@^1.0.0";
         ~~~~~~~~~~
    at file://<tmpdir>/src/fields/BooleanGqlField.ts:1:10

